Fix calendar (#6)
* add events range

* range over site regular pages

* try with

* fix event_url

* make 2020 just like 2019

* why is this not showing up??

* ah date is filtering by default

* solved dates problem!

* add testing future event

* update events_sticky partial layout

* add events with css child selectors instead of using Hugo in partial to select top 2

* events partial layout --> events_sticky instead

* more events --> events_sticky partial layout updates

* delete old events yaml and partial

--- a/themes/rstudio-lithium/static/css/main-site.css
+++ b/themes/rstudio-lithium/static/css/main-site.css
@@ -1101,12 +1101,14 @@ em {
   background-repeat: no-repeat;
   background-position: right top;
   background-size: 75px 75px; }
-  .event.odd {
+  .event:nth-child(2) {
     -webkit-transform: rotate(358deg);
     transform: rotate(358deg); }
-  .event.even {
+  .event:nth-child(3) {
     -webkit-transform: rotate(2deg);
     transform: rotate(2deg); }
+  .event:nth-child(n+4) {
+    display: none; }
   .event.meetup {
     background-image: url(images/tidy-event-back-meetup.svg); }
   .event.conf {
